<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/mainMenuFragment">

    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.grumpjaw.pokepockettracker.fragment.MainMenuFragment"
        android:label="@string/main_menu_text"
        tools:layout="@layout/fragment_main_menu">
        <action
            android:id="@+id/action_mainMenuFragment_to_scoreFragment"
            app:destination="@id/scoreFragment" />
    </fragment>

    <fragment
        android:id="@+id/scoreFragment"
        android:name="com.grumpjaw.pokepockettracker.fragment.ScoreFragment"
        android:label="@string/score_screen_text"
        tools:layout="@layout/fragment_score" >
        <action
            android:id="@+id/action_scoreFragment_to_scoreRecordFragment"
            app:destination="@id/scoreRecordFragment" />
        <action
            android:id="@+id/action_scoreFragment_to_scoreDisplayFragment"
            app:destination="@id/scoreDisplayFragment" />
    </fragment>

    <fragment
        android:id="@+id/scoreRecordFragment"
        android:name="com.grumpjaw.pokepockettracker.fragment.ScoreRecordFragment"
        android:label="@string/score_record_text"
        tools:layout="@layout/fragment_score_record" />

    <fragment
        android:id="@+id/scoreDisplayFragment"
        android:name="com.grumpjaw.pokepockettracker.fragment.ScoreDisplayFragment"
        android:label="@string/score_display_text"
        tools:layout="@layout/fragment_score_display" />
</navigation>
