<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/my_deck_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:text="@string/select_my_deck" />

    <Spinner
        android:id="@+id/my_deck_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_deck_label"
        android:layout_marginBottom="16dp"
        android:entries="@array/my_deck_list"
        android:prompt="@string/select_my_deck" />

    <TextView
        android:id="@+id/opponent_deck_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_deck_spinner"
        android:layout_marginBottom="8dp"
        android:text="@string/select_opponent_deck" />

    <Spinner
        android:id="@+id/opponent_deck_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/opponent_deck_label"
        android:layout_marginBottom="16dp"
        android:entries="@array/opponent_deck_list"
        android:prompt="@string/select_opponent_deck" />

    <LinearLayout
        android:id="@+id/checkbox_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/opponent_deck_spinner"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/win_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/win" />

        <CheckBox
            android:id="@+id/first_turn_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/first_turn" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_group"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />
</RelativeLayout>
